# SIM-SLAM

./: .gitignore  .gitmodules  README.md
docs/: fast_lio2_input_contract.md  isaac_fast_lio2_workflow.md  troubleshooting.md
ros2_ws/src/FAST_LIO/: CMakeLists.txt  package.xml
ros2_ws/src/FAST_LIO/config/: VLS.yaml
ros2_ws/src/FAST_LIO/launch/: mapping.launch.py
ros2_ws/src/FAST_LIO/rviz/: fastlio.rviz
ros2_ws/src/FAST_LIO/src/: laserMapping.cpp
ros2_ws/src/deploy_policy/: CMakeLists.txt  package.xml
ros2_ws/src/deploy_policy/config/fast_lio/: isaac_go2w.yaml
ros2_ws/src/deploy_policy/launch/: armdog_controller.launch.py  controller_launch_utils.py  fast_lio_isaac_go2w.launch.py  go2_controller.launch.py  go2w_controller.launch.py  isaac_fast_lio_inputs.launch.py
ros2_ws/src/deploy_policy/policy/go2/flat/exported/: policy.pt
ros2_ws/src/deploy_policy/policy/go2/flat/params/: agent.yaml  env.yaml
ros2_ws/src/deploy_policy/policy/go2w/flat/exported/: policy.pt
ros2_ws/src/deploy_policy/policy/go2w/flat/params/: agent.yaml  env.yaml
ros2_ws/src/deploy_policy/policy/go2w/rough/exported/: policy.pt
ros2_ws/src/deploy_policy/policy/go2w/rough/params/: agent.yaml  env.yaml
ros2_ws/src/deploy_policy/rviz/: fast_lio_isaac_go2w.rviz
ros2_ws/src/deploy_policy/scripts/: __init__.py  armdog_controller.py  check_pointcloud_timing.py  go2_controller.py  go2w_controller.py  isaac_pointcloud_time_adapter.py  pointcloud_timing_core.py
ros2_ws/src/deploy_policy/test/: test_controller_launch_utils.py  test_docs_fast_lio_go2w_debug.py  test_fast_lio_isaac_go2w_launch.py  test_fast_lio_isaac_go2w_rviz.py  test_go2w_controller_launch.py  test_go2w_controller_sync.py  test_isaac_fast_lio2_runner_config.py  test_isaac_pointcloud_time_adapter.py  test_pointcloud_timing_core.py
scripts/ros2/: check_isaac_ros2_node_schema.py  isaac_fast_lio2_go2w_scene.py  ros2_bridge_env.py
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/rsl_rl/local_rsl_rl/: __init__.py
scripts/rsl_rl/local_rsl_rl/algorithms/: distillation.py  ppo.py
scripts/rsl_rl/local_rsl_rl/config/: vecenv_wrapper.py
scripts/rsl_rl/local_rsl_rl/modules/: actor_critic.py  actor_critic_recurrent.py  rnd.py  student_teacher.py  student_teacher_recurrent.py
scripts/rsl_rl/local_rsl_rl/networks/: encodering.py  memory.py  mlp.py
scripts/rsl_rl/local_rsl_rl/runners/: distillation_runner.py  on_policy_runner.py
scripts/rsl_rl/local_rsl_rl/storage/: rollout_storage.py
scripts/test_core/: armdog_sim.py  setup_scene.py  sim.py  test.py
source/Robocon2026/Robocon2026/map/: terrains.py
source/Robocon2026/Robocon2026/robots/: armdog.py  go2w.py  so101.py
source/Robocon2026/Robocon2026/tasks/manager_based/arm_control/: __init__.py  arm_control_env_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/arm_control/agents/: rsl_rl_ppo_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/arm_control/config/: lift_distillation_vision_env_cfg.py  lift_ppo_env_cfg.py  place_ppo_env_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/arm_control/mdp/: event.py  rewards.py  terminations.py
source/Robocon2026/Robocon2026/tasks/manager_based/assemble_weapon/: __init__.py  assemble_weapon_env_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/assemble_weapon/agents/: rsl_rl_ppo_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/assemble_weapon/config/: dual_ppo_env_cfg.py  single_ppo_env_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/assemble_weapon/mdp/: __init__.py  (+3 more)
source/Robocon2026/Robocon2026/tasks/manager_based/basic_control/: __init__.py  basic_control_env_cfg.py
source/Robocon2026/Robocon2026/tasks/manager_based/robocon2026/: __init__.py  robocon2026_env_cfg.py
source/Robocon2026/Robocon2026/utils/: utils.py
(+15 files in other folders)
